--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,11 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+
         <title>{% block title %}Geekbase{% endblock %}</title>
         {% block stylesheets %}
             <!-- Custom fonts for this template-->
