--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <h1 class="h3 mb-4 text-gray-800">Landing page</h1>
+    <h1 class="h3 mb-4 text-gray-800">Dashboard</h1>
 {% endblock %}
