Removed typo and changed & to html-safe entity

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -246,7 +246,7 @@
                 <footer class="sticky-footer bg-white">
                     <div class="container my-auto">
                         <div class="copyright text-center my-auto">
-                            <span>Copyright &copy; <a href="https://madebysander.nl/">Sander Krause</a>a & <a href="https://marielle.dev/">Mariëlle van Dijk</a> {{ "now"|date('Y') }}</span>
+                            <span>Copyright &copy; <a href="https://madebysander.nl/">Sander Krause</a> &amp; <a href="https://marielle.dev/">Mariëlle van Dijk</a> {{ "now"|date('Y') }}</span>
                         </div>
                     </div>
                 </footer>
