--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -9,9 +9,9 @@
 {#            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>#}
 {#        </div>#}
         <div class="card-body">
-            <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    <thead>
+            <div class="">
+                <table class="table table-bordered border-primary rounded" id="dataTable" width="100%" cellspacing="0">
+                    <thead class="bg-primary text-white">
                     <tr>
                         <th>Title</th>
                         <th>Genre</th>
@@ -22,17 +22,17 @@
                         <th>Condition</th>
                     </tr>
                     </thead>
-                    <tfoot>
-                    <tr>
-                        <th>Title</th>
-                        <th>Genre</th>
-                        <th>Publisher</th>
-                        <th>Release date</th>
-                        <th>Platform</th>
-                        <th>Special Edition?</th>
-                        <th>Condition</th>
-                    </tr>
-                    </tfoot>
+{#                    <tfoot>#}
+{#                    <tr>#}
+{#                        <th>Title</th>#}
+{#                        <th>Genre</th>#}
+{#                        <th>Publisher</th>#}
+{#                        <th>Release date</th>#}
+{#                        <th>Platform</th>#}
+{#                        <th>Special Edition?</th>#}
+{#                        <th>Condition</th>#}
+{#                    </tr>#}
+{#                    </tfoot>#}
                     <tbody>
                     {% for game in games %}
                         <tr>
