--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,9 +20,7 @@
                         {{ form_start(registrationForm) }}
                         {{ form_row(registrationForm.username) }}
                         {{ form_row(registrationForm.email) }}
-                        {{ form_row(registrationForm.plainPassword, {
-                            label: 'Password'
-                        }) }}
+                        {{ form_row(registrationForm.password) }}
                         {{ form_row(registrationForm.agreeTerms) }}
                         {{ form_row(registrationForm.submit, {'label': 'Register'}) }}
                         {{ form_end(registrationForm) }}
