Added form for adding new games. Added page to render form. Added some fancy stats to game overview page.

--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -4,6 +4,83 @@
 
     <h1 class="h3 mb-2 text-gray-800">Your game collection</h1>
 
+    <div class="row">
+
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Add game to your collection</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                <a href="{{ path('game_add') }}" class="btn btn-block btn-primary">
+                                    <i class="fas fa-plus fa-2x"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-success shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-secondary text-uppercase mb-1"># of games in your collection</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ numGames }}</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-compact-disc fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-info shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Special Editions</div>
+                            <div class="row no-gutters align-items-center">
+                                <div class="col-auto">
+                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{ numSpecialEditions ~ ' / ' ~ numGames }}</div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress progress-sm mr-2">
+                                        <div class="progress-bar bg-info" role="progressbar" style="width: {{ percentSpecialEditions }}%" aria-valuenow="{{ percentSpecialEditions }}" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-grin-hearts fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-warning shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Unique genres</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ numGenres }}</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-bars fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="card shadow mb-4">
 {#        <div class="card-header py-3">#}
 {#            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>#}
