--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -198,6 +198,7 @@
                             <div class="topbar-divider d-none d-sm-block"></div>
 
                             <!-- Nav Item - User Information -->
+                            {# Ensures that user is authenticated so we can show the right bar #}
                             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                                 <li class="nav-item dropdown no-arrow">
                                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
@@ -216,6 +217,10 @@
                                         <a class="dropdown-item" href="#">
                                             <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                             Settings
+                                        </a>
+                                        <a class="dropdown-item" href="{{ path('privacy') }}">
+                                            <i class="fas fa-user-secret fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            Privacy
                                         </a>
                                         <a class="dropdown-item" href="#">
                                             <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
