--- a/templates/privacy/index.html.twig
+++ b/templates/privacy/index.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Add a new game to your collection</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Put yourself into hiding, and choose which categories you want to show</h6>
         </div>
         <div class="card-body">
             {{ form(privacySettingsForm) }}
