--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -204,8 +204,13 @@
                                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ app.user.username }}</span>
-                                        <img class="img-profile rounded-circle"
-                                             src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                                        {% if app.user %}
+                                            <img class="img-profile rounded-circle"
+                                                 src="https://www.gravatar.com/avatar/{{ app.user.gravatar }}">
+                                        {% else %}
+                                            <img class="img-profile rounded-circle"
+                                                 src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                                        {% endif %}
                                     </a>
                                     <!-- Dropdown - User Information -->
                                     <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
