--- a/templates/game/add.html.twig
+++ b/templates/game/add.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('form') }}
+{% endblock %}
+
 {% block content %}
 
     <div class="card shadow mb-4">
@@ -11,5 +16,9 @@
         </div>
     </div>
 
+{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('form') }}
 {% endblock %}
