User settings and dark mode for the front end

--- a/assets/scss/sb-admin-2.scss
+++ b/assets/scss/sb-admin-2.scss
@@ -19,6 +19,7 @@
 @import "login.scss";
 @import "error.scss";
 @import "footer.scss";
+@import "darkmode.scss";
 
 // Import Font Awesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
